--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,11 +19,11 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        VITE_API_BASE_URL: ${VITE_API_BASE_URL:-http://localhost:8000/api/v1}
     container_name: starwars-frontend
     ports:
       - "6969:3000"
-    environment:
-      - VITE_API_BASE_URL=http://localhost:8000/api/v1
     depends_on:
       - backend
     networks:
