--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,6 +12,9 @@ COPY . .
 
 RUN npm run build
 
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+
 EXPOSE 3000
 
 CMD ["serve", "-s", "dist", "-l", "3000"]
