--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,8 +12,8 @@ COPY . .
 
 RUN npm run build
 
-ARG VITE_API_BASE_URL
-ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+ARG VITE_API_BASE_URL=http://localhost:8000/api/v1
+ENV VITE_API_BASE_URL=${VITE_API_BASE_URL}
 
 EXPOSE 3000
 
